social media icons disappear when resizing too small + menu becomes stacked instead of inline - fixes issue #19

--- a/publishr/static/css/main.less
+++ b/publishr/static/css/main.less
@@ -1,5 +1,4 @@
 body {
-    background-color: red;
     background: #222 url(img/background.png) top left repeat;
     color: #fff;
     font-size: 16px;
@@ -33,8 +32,6 @@ body {
     width: 60px;
     height: 60px;
     border-radius: 30px;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
     box-shadow: 0 0 8px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
     -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
@@ -58,15 +55,13 @@ body {
 }
 
 .menu {
-  height: 30px;
   margin-bottom: 10px;
+  padding: 10px 0px 10px 0px;
   background:rgba(255, 255, 255, 0.1);
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-direction: row;
   flex-direction: row;
   justify-content: space-between;
-  -webkit-justify-content: space-between;
 }
 
 .menu-item {
@@ -99,3 +94,13 @@ body {
     height: 100px;
 }
 
+@media (max-width: 900px) {
+    .social {
+        display: none;
+    }
+
+    .menu {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
